# mynt-capture

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: build.sh
src/: main.cpp  remote.py
